fixing spacing

--- a/styles.css
+++ b/styles.css
@@ -76,9 +76,9 @@ img{
   flex-direction: row;
   justify-content: center;
   /* background-color: #1a1a92; */
-  /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 400'%3E%3Cdefs%3E%3CradialGradient id='a' cx='396' cy='281' r='514' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%231a1a92'/%3E%3Cstop offset='1' stop-color='%231a1a92'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='400' y1='148' x2='400' y2='333'%3E%3Cstop offset='0' stop-color='%236893ff' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%236893ff' stop-opacity='0.5'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='800' height='400'/%3E%3Cg fill-opacity='0.5'%3E%3Ccircle fill='url(%23b)' cx='267.5' cy='61' r='300'/%3E%3Ccircle fill='url(%23b)' cx='532.5' cy='61' r='300'/%3E%3Ccircle fill='url(%23b)' cx='400' cy='30' r='300'/%3E%3C/g%3E%3C/svg%3E"); */
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 400'%3E%3Cdefs%3E%3CradialGradient id='a' cx='396' cy='281' r='514' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%231a1a92'/%3E%3Cstop offset='1' stop-color='%231a1a92'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='400' y1='148' x2='400' y2='333'%3E%3Cstop offset='0' stop-color='%236893ff' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%236893ff' stop-opacity='0.5'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='800' height='400'/%3E%3Cg fill-opacity='0.5'%3E%3Ccircle fill='url(%23b)' cx='267.5' cy='61' r='300'/%3E%3Ccircle fill='url(%23b)' cx='532.5' cy='61' r='300'/%3E%3Ccircle fill='url(%23b)' cx='400' cy='30' r='300'/%3E%3C/g%3E%3C/svg%3E");
   background-image: url('src/svg.png');
-  /* background-position: bottom center; */
+  background-position: bottom center;
   background-attachment: fixed;
 }
 
@@ -274,7 +274,7 @@ h1 {
   .control h1{
     display: block;
     color: white !important;
-    padding: 50px;
+    padding: 40px;
     align-self: flex-end;
     letter-spacing: 1.5px !important
   }
@@ -10392,8 +10392,8 @@ header .search-form .form-control {
 }
 
 .section {
-  padding: 3.5em 2em;
-  z-index: -1;
+  padding: 3.5rem 2rem;
+  
 }
 
 .section-subscribe {
